apps/mastodon/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mastodon-ingress 
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  tls:
    - hosts:
        - "mast.${PUBLIC_HOSTNAME}"
      secretName: mastodon-tls 
  rules:
    - host: "mast.${PUBLIC_HOSTNAME}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mastodon
                port: 
                  number: 80
